--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
 
-<h1>Cruise Web NFC </h1>
+<h1>Web NFC Testing</h1>
 <button id="scanButton">Scan</button>
 <button id="writeButton">Write</button>
 
