--- a/index.html
+++ b/index.html
@@ -13,8 +13,11 @@
       background-color: #f0f0f0;
       border-radius: 0.75em;
       display: block;
-      margin: 0.5em;
-      padding: 0.5em;
+      text-align: left;
+      display: inline-block;
+      left: 1%;
+      right: 1%;
+      top: 50%;
     }
     /* Header/Logo Title */
     .header {
