--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
       left: 1%;
       right: 1%;
       top: 50%;
-      width:100%
+      width:100%;
+      word-break: break-all
     }
     /* Header/Logo Title */
     .header {
