--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       right: 1%;
       top: 50%;
       width:100%;
-      word-break: break-all
+      hyphens: auto;
     }
     /* Header/Logo Title */
     .header {
