--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       left: 1%;
       right: 1%;
       top: 50%;
-      width:100%;
+      width:800px;
       hyphens: auto;
     }
     /* Header/Logo Title */
