fixed to 800px for child

--- a/index.html
+++ b/index.html
@@ -93,9 +93,9 @@
 
 <h3>Live Output</h3>
 <div id="output" class="output">
-  <div id="content"></div>
-  <div id="status"></div>
-  <pre id="log">
+  <div id="content" style="width:800px;"></div>
+  <div id="status" style="width:800px;"></div>
+  <pre id="log" style="width:800px;">
 </pre>
 </div>
 </div>
