--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
     .output {
       background-color: #f0f0f0;
       border-radius: 0.75em;
-      display: block;
       text-align: left;
       display: inline-block;
       left: 1%;
@@ -93,9 +92,9 @@
 
 <h3>Live Output</h3>
 <div id="output" class="output">
-  <div id="content" style="width:800px;"></div>
-  <div id="status" style="width:800px;"></div>
-  <pre id="log" style="width:800px;">
+  <div id="content" ></div>
+  <div id="status"></div>
+  <pre id="log" >
 </pre>
 </div>
 </div>
