--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
       right: 1%;
       top: 50%;
       width:800px;
-      hyphens: auto;
     }
     /* Header/Logo Title */
     .header {
@@ -94,8 +93,7 @@
 <div id="output" class="output">
   <div id="content" ></div>
   <div id="status"></div>
-  <pre id="log" >
-</pre>
+  <div id="log" ></div>
 </div>
 </div>
 <script src="rfid.js"></script>
