--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
       right: 1%;
       top: 50%;
       width:800px;
-      white-space: pre;
     }
     /* Header/Logo Title */
     .header {
@@ -91,11 +90,8 @@
   </select>
 
 <h3>Live Output</h3>
-<div id="output" class="output">
-  <div id="content" ></div>
-  <div id="status"></div>
-  <div id="log" ></div>
-</div>
+<textarea id="output" style="width:100%;border-radius: 15px;border-width:0px;background-color:#E8E8E8" rows="5" readonly >
+</textarea>
 </div>
 <script src="rfid.js"></script>
 </body>
